--- a/src/client/pages/home/index.scss
+++ b/src/client/pages/home/index.scss
@@ -3002,3 +3002,26 @@ html.is-safari .bubble:not(.round) img:not(.emoji),html.is-safari .bubble:not(.r
                 height: 100%;
                 max-width: 100%;
                 max-height: 100%}
+                // .grid {
+                //     width: 100%;
+                //     display: grid;
+                //     grid-template-columns: repeat(3, 1fr);
+                //     grid-auto-rows: 1fr;
+                //     grid-gap: .25rem}
+                // .grid-item {
+                //     height: 0;
+                //     padding-bottom: 100%;
+                //     position: relative;
+                //     cursor: pointer;
+                //     -webkit-user-select: none;
+                //     -moz-user-select: none;
+                //     -ms-user-select: none;
+                //     user-select: none}
+                // .grid-item-media {
+                //     position: absolute;
+                //     left: 0;
+                //     top: 0;
+                //     width: 100%;
+                //     height: 100%;
+                //     -o-object-fit: cover;
+                //     object-fit: cover}
